# qmusic

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/: mainwindow.cpp  mainwindow.h
ui/: mainwindow.ui
